@@ -1,0 +1,59 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-POP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001SF9\u6210\u54e1\u63a5\u9023\u767c\u5e03\u65b0\u4f5c\u54c1\uff0c\u6cb3\u6210\u96f2\u6372\u5165\u6284\u8972\u98a8\u6ce2", "description": "K-POP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001SF9\u6210\u54e1\u63a5\u9023\u767c\u5e03\u65b0\u4f5c\u54c1\uff0c\u6cb3\u6210\u96f2\u6372\u5165\u6284\u8972\u98a8\u6ce2", "url": "https://www.famechos.me/news/K-POP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001SF9\u6210\u54e1\u63a5\u9023\u767c\u5e03\u65b0\u4f5c\u54c1\uff0c\u6cb3\u6210\u96f2\u6372\u5165\u6284\u8972\u98a8\u6ce2/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-05T21:54:52.475067+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波/"/>
+<meta name="description" content="K-POP大爆炸！aespa、NCT、SF9成員新作品接連發布，河成雲捲入抄襲風波，最新消息與作品動態盡在此！">
+
+<meta name="keywords" content="K-POP,aespa,NCT,SF9,河成雲,新作品,抄襲風波,K-POP新聞,K-POP最新消息">
+
+        <meta property="og:url" content="https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波/" />
+        <meta property="og:title" content="K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波" />
+        <meta property="og:description" content="K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波" />
+        <meta property="twitter:description" content="K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+<h1>K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波</h1>
+</head>
+
+<body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9l8onM0FAq8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>aespa 即將推出的第五張迷你專輯預告內容已經上線。歌曲《Whiplash》的短片、六首歌曲的片段和一個專門的迷你專輯網站已經公開，讓粉絲可以混合和下載歌曲的部分內容。</p>
+<p>這張迷你專輯將於10月21日全面公開，與aespa正在進行的第二次國際巡演“2024 aespa Live Tour - SYNK : Parallel Line”相關。該巡演已經擴展到北美、拉丁美洲和歐洲，共計29個城市，41場演唱會。最後一場演唱會將於3月12日在西班牙馬德里舉行。</p>
+<h2>日本首張個人專輯歌曲由NCT成員中本悠太發布</h2>
+<p>NCT成員中本悠太於周四發布了他即將推出的日本首張個人專輯《Depth》的所有歌曲。七首歌曲已經在各大音樂平台上線，包括主打歌《摘下面具》的音樂視頻。歌曲標題表達了他想要展現真實自我的意志，不再隱藏任何東西，接受任何挑戰。</p>
+<p>實體專輯將於11月13日發行，中本悠太將成為NCT第六位發行個人專輯的成員。與此同時，他將於周六開始在日本舉辦個人巡演，共計五個城市，九場演唱會，演唱會的標題是“Hope”。所有九場演唱會的門票已經售罄。</p>
+<h2>SF9成員柳太陽發布首張個人單曲</h2><h1>SF9成員柳太陽將發布首張個人單曲</h1>
+<p>SF9成員柳太陽將於10月6日發布他的首張個人單曲。該單曲名為《Hug Me》，視覺效果包括歌曲的部分歌詞，鼓勵聽眾儘管面臨困難，但仍要朝著夢想前進。</p>
+<p>柳太陽曾在6月的個人粉絲演唱會上首次表演了這首自作曲，並將於10月4-5日的粉絲演唱會上再次表演這首歌曲。</p>
+<p>柳太陽最近完成了音樂劇《薩列里》的最後一場演出。SF9也於9月發布了第14張迷你專輯《Fantasy》，這是三部曲的第一部分。然而，這張專輯只有五位成員參與，因為成員在恩和道元正在服兵役，朱豪則有日程衝突。</p>
+<h2>河成雲否認參與OST歌曲創作過程</h2>
+<p>河成雲通過經紀公司Big Planet Entertainment發表聲明，稱他只參與了電視劇原聲音樂的錄製，與歌曲《What Are We》的抄襲爭議無關。</p>
+<h2>OST歌曲爭議：河成雲參與引發熱議</h2>
+<p>河成雲表示，他參與了電影《隔壁的愛情》的原聲音樂錄製，但並沒有參與歌曲的創作或編曲。該歌曲於10月1日發行。</p>
+<p>歌手白藝潾在社交媒體上表達了她的疑慮，認為這首歌與她2019年發行的歌曲《0310》相似，並稱之為她的歌曲的“翻唱”。</p>
+<p>河成雲將擔任選秀節目《Project 7》的聲樂導演，該節目將於10月18日播出。他曾是《創造101》的決賽選手之一。</p>
+
+<p>資料來源： Korea Herald</p>
+</body>
+</html>
