@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 05 Oct 2024 21:53:05 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 05 Oct 2024 21:55:01 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -37,5 +37,10 @@
   <link>https://www.famechos.me/news/酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！/</link>
   <description>酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！</description>
   <pubDate>Sat, 05 Oct 2024 21:53:05 +0800</pubDate>
+</item><item>
+  <title>K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波</title>
+  <link>https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波/</link>
+  <description>K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波</description>
+  <pubDate>Sat, 05 Oct 2024 21:55:01 +0800</pubDate>
 </item></channel>
 </rss>
