@@ -42,4 +42,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波/</ns0:loc>
+    <ns0:lastmod>2024-10-05T21:55:01+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
